@@ -227,7 +227,6 @@ General configuration
    * app.add_generic_role
    * app.add_source_parser
    * download.not_readable
-   * image.data_uri
    * image.not_readable
    * ref.term
    * ref.ref
