@@ -65,6 +65,7 @@ class Builder(object):
     #: Image files are searched in the order in which they appear here.
     supported_image_types = []  # type: List[unicode]
     supported_remote_images = True
+    supported_data_uri_images = False
 
     def __init__(self, app):
         # type: (Sphinx) -> None
